query desde maui

--- a/Ejemplos_Maui_Integracion/Ejemplo_Maui_Inventario/Pages/MainPage.xaml
+++ b/Ejemplos_Maui_Integracion/Ejemplo_Maui_Inventario/Pages/MainPage.xaml
@@ -6,7 +6,8 @@
     <ScrollView>
         <VerticalStackLayout Padding="30,0" Spacing="25">
 
-            <CollectionView ItemsSource="{Binding Personas}">
+            <CollectionView ItemsSource="{Binding Personas}" SelectionMode="Single"
+                SelectionChanged="OnMostrarDetallePersonaSelectionChanged">
                 
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
