--- a/Ejemplos_Maui_Integracion/Ejemplo_Maui_Inventario/Pages/MainPage.xaml
+++ b/Ejemplos_Maui_Integracion/Ejemplo_Maui_Inventario/Pages/MainPage.xaml
@@ -6,8 +6,9 @@
     <ScrollView>
         <VerticalStackLayout Padding="30,0" Spacing="25">
 
-            <CollectionView ItemsSource="{Binding Personas}" SelectionMode="Single"
-                SelectionChanged="OnMostrarDetallePersonaSelectionChanged">
+            <CollectionView ItemsSource="{Binding Personas}" 
+                            SelectionMode="Single"
+                            SelectionChanged="OnMostrarDetallePersonaSelectionChanged">
                 
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
